# urnik

./: .gitignore  .project  .pydevproject  Dockerfile  README.md  compose-development.yaml  compose-production.yml  compose-test.yml  docker-compose-development.yml  docker-compose-production.yml  docker-compose.test.yml  manage.py  pyproject.toml  requirements_development.txt  requirements_production.txt
.devcontainer/: devcontainer.json
.github/: docker.yml
.github/workflows/: docker.yml
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  datetime.data.json  datetime.meta.json  enum.data.json  enum.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  operator.data.json  operator.meta.json  posix.data.json  posix.meta.json  socket.data.json  socket.meta.json  ssl.data.json  ssl.meta.json  string.data.json  string.meta.json  sys.data.json  sys.meta.json  threading.data.json  threading.meta.json  time.data.json  time.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json
.mypy_cache/3.7/collections/: __init__.data.json  (+3 more)
exchange/: controllers.py  forms.py  models.py  tests.py  urls.py  views.py
exchange/migrations/: 0001_exchange_base.py  0001_initial.py
exchange/templatetags/: exchange_helpers.py
frinajave/: admin.py  models.py
frinajave/migrations/: 0001_initial.py
friprosveta/: admin.py  auth.py  forms.py  models.py  restapi.py  serializers.py  studis.py  tests.py  ul_groupname.py  urls.py  views.py
friprosveta/migrations/: 0001_initial.py  0002_auto_20180228_1129.py  0003_auto_20180930_2347.py  0004_activity_ready_to_schedule.py  0005_activity_cycles_on_site.py  0006_student_upn.py
friprosveta/templates/: base.html  navigation.html
friprosveta/templatetags/: resource_tags.py
src/exchange/: admin.py  apps.py  controllers.py  tests.py  urls.py
src/frinajave/: admin.py
src/friprosveta/: admin.py  models.py  restapi.py  serializers.py  studis.py  tests.py  urls.py  views.py
src/timetable/: admin.py  forms.py  models.py  urls.py
src/timetable_fri.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/urnik_fri/: settings.py  settings_common.py  settings_example.py  settings_midime.py  wsgi_example.py
timetable/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
timetable/management/: __init__.py
timetable/migrations/: 0001_initial.py  0002_auto_20180228_1129.py  0003_auto_20180930_2347.py  0004_group_visible_in_navigation.py  0005_alter_activity_mustnotoverlap.py  0007_traderequest_tradematch_and_more.py  0008_delete_heuristic.py  0009_resourcegroup_alter_resource_options_resource_order_and_more.py  0010_resourcegroup_exactly_one.py  0011_traderequest_teacher_rejected_by_and_more.py  0012_traderequest_desired_classroom.py  0013_add_trading_enabled.py  0014_teacher_studis_id.py  0015_traderequest_original_offered_snapshot.py  0016_traderequest_original_desired_snapshot.py
timetable/models/: __init__.py  activities.py  classrooms.py  constants.py  core.py  groups.py  preferences.py  tags.py  timetables.py
timetable/templates/: 404.html
timetable/templatetags/: timetable_extras.py
unitime/: models.py
unitime/migrations/: 0001_initial.py
urnik_fri/: __init__.py  celery.py  settings_common.py  settings_example.py  settings_midime.py  urls.py  wsgi_example.py
(+273 files in other folders)
