[build-system]
requires = ["setuptools >= 80.9.0", "setuptools_scm >= 8.3.1"]
build-backend = "setuptools.build_meta"

[project]
name = "timetable-fri"
description = "UL FRI Timetable API"
authors = [{ name = "Gregor Jerše", email = "gregor@jerse.info" }, { name = "Gašper Fele-Žorž", email = "polz@not.si" }]
dynamic = ["version"]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13, <3.14"
keywords = ["timetabling", "FRI", "university", "timetable", "api", "django", "rest-framework"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django :: 5.2",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "Django ~= 5.2.7",
    "djangorestframework ~= 3.16.1",
    "django-filter ~= 25.2",
    "dj-rest-auth ~= 7.0.1",
    "django-cors-headers ~= 4.9.0",
    "python-ldap ~= 3.4.5",
    "requests ~= 2.32.5",
    "django-auth-ldap ~= 5.2.0",
    "django-impersonate ~= 1.9.5",
    "django-import-export ~= 4.3.12",
    "pytz ~= 2025.2",
    "icalendar ~= 6.3.1",
    "palettable ~= 3.3.3",
]
[project.optional-dependencies]
postgres = ["psycopg[binary] ~= 3.2.12"]
docs = ["sphinx", "sphinx-pyproject"]
package = ["twine", "check-manifest", "build"]
test = ["ruff~=0.14.2", "pytest-cov"]
devel = ["ipython", "types-tqdm"]
[project.urls]
repository = "https://github.com/ul-fri/urnik"
documentation = "https://github.com/ul-fri/urnik"

[tool.setuptools_scm]

